--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -25,7 +25,7 @@ jobs:
               run: |
                   cd backend
                   npm ci
-            - name: Deploy on server
+            - name: Deploy on servers
               env:
                   DEPLOYMENT_KEY_B64: ${{ secrets.DEPLOYMENT_KEY_B64 }}
               run: |
