--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "SET NODE_ENV=production && node index.js",
+    "dev": "SET NODE_ENV=dev&&nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "follow-redirects": "^1.14.1",
+    "react-redux": "^7.2.4",
     "url": "^0.11.0"
   },
   "devDependencies": {
