--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "follow-redirects": "^1.14.1",
+    "helmet": "^4.6.0",
     "react-redux": "^7.2.4",
     "url": "^0.11.0"
   },
