--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,13 +40,15 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "yahoo-finance": "^0.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
