--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "SET NODE_ENV=production && node index.js",
+    "start": "NODE_ENV=production && node index.js",
     "dev": "SET NODE_ENV=dev&&nodemon index.js"
   },
   "author": "",
