--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,8 +46,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.32.8",
-    "yahoo-finance": "^0.3.7"
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
