--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,9 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "follow-redirects": "^1.14.1",
-    "google-finance": "^0.1.12",
     "helmet": "^4.6.0",
     "react-redux": "^7.2.4",
-    "robinhood": "^1.7.0",
+    "unirest": "^0.6.0",
     "url": "^0.11.0",
     "yahoo-finance": "^0.3.7"
   },
