--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -17,6 +17,7 @@ jobs:
               with:
                   python-version: '3.8'
                   architecture: x64
+            - name: Build Python
               run: |
                   cd cb-backend
                   pip3 install -r requirements.txt
